--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "background_color": "#ffffff",
+  "background_color": "#EEEDEB",
   "description": "Category: Healthy Food",
   "dir": "ltr",
   "display": "standalone",
